skeplib/tests/fixtures/parser/valid/simple_io.sk
import io;

fn main() -> Int {
  io.println("ok");
  return 0;
}
