skeplib/tests/fixtures/parser/invalid/break_missing_semicolon.sk
fn main() -> Int {
  while (true) {
    break
  }
  return 0;
}
